--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Mobisystems</h2>
             <hr class="my-4">
-            <p class="text-faded mb-4">We provide all kind of domestic electrical services. Our electricians are fully qualified and all the jobs are done strictly according clients requirements.</p>
+            <p class="text-faded mb-4">We provide all kind of domestic electrical services. Please use our contact details for quotes and appointments.</p>
           </div>
         </div>
         <div class="row">
