--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading" style="font-size: 33px;">Mobisystems Ltd</h2>
+            <h2 class="section-heading" style="font-size: 36px;">Mobisystems Ltd</h2>
             <hr class="my-4">
-            <p class="text-faded mb-4" style="font-size: 22px;">We provide all kind of domestic electrical services. Please use our contact details for quotes and appointments.</p>
+            <p class="mb-4" style="font-size: 22px;">We provide all kind of domestic electrical services. Please use our contact details for quotes and appointments.</p>
           </div>
         </div>
         <div class="row">
